# chatbot_apotek

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  botmain.py  corpus_chatbot_apotek_extended.json  dataset.py  db.sqlite3  entrypoint.sh  generate_model.py  main.py  modeling.py  pipe.py  postprocessing.py  prediction.py  preprocessing.py  prod_requirements.txt  prod_requirements_2.txt  pyproject.toml  requirements.txt  serve.py  unit_transform.py
adapter/: Sqlite.py
bot_ml/: modeling.py  postprocessing.py  preprocessing.py
botmain/: modeling.py  prediction.py  preprocessing.py
config/: settings.py
db/: models.py
db/management/commands/: generate_csv.py  migrate_dataset.py  train.py
db/migrations/: 0001_initial.py  0002_botsessiondb.py  0003_datasetdb_rename_bot_say_botsessiondb_prev_question_and_more.py  0004_alter_botsessiondb_prev_question.py
schema/: __init__.py
